Removed floating scrollbar bug in Dialog (finally!)

--- a/client/stylesheets/base/_layout.scss
+++ b/client/stylesheets/base/_layout.scss
@@ -40,6 +40,9 @@ label[for] { font-weight: inherit; }
   }
 }
 
+// Necessary to remove floating scrollbars!!!
+.dialog > div > div { overflow: hidden; }
+
 // Flexbox Grid
 .flex-row {
   padding: 15px 0;
